2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Content.cs:
	* FullScreenOptions.cs:
	* ComAutomationEvent.cs:
	* ComAutomationFactory.cs:
	* ComAutomationEventArgs.cs:
	* ComAutomationEventHandler.cs: Update to SL4 final API.

2010-05-19  Sebastien Pouliot  <sebastien@ximian.com>

	* SilverlightHost.cs: Move InitParams initialization here (and
	avoid creating a unneeded object)

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* SilverlightHost.cs (get_Source): deal with PluginHost.Handle ==
	IntPtr.Zero, by using Surface::GetSourceLocation.

	* PluginHost.cs (GetApplicationIdentity): open this method up so
	we can call it from Deployment.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ComAutomationMetaObjectProviderAwaitingIndex.cs:
	* ComAutomationMetaObjectProviderBase.cs:
	* ComAutomationEvent.cs:
	* ComAutomationEventArgs.cs:
	* ComAutomationEventHandler.cs:
	* ComAutomationEventMetaObjectProvider.cs:
	* ComAutomationFactory.cs:
	* ComAutomationMetaObjectProvider.cs:
	* Settings.cs: Update to SL4 beta API.

2010-02-03  Larry Ewing  <lewing@novell.com>

	* SilverlightHost.cs: add a hack to expose InitParams.

2009-12-16  Jeffrey Stedfast  <fejj@novell.com>

	* Settings.cs (EnableFrameRateCounter): Implemented.
	(EnableRedrawRegions): Implemented.

	* NavigationStateChangedEventArgs.cs: Made the ctor public and
	fixed the order of the args.

2009-12-03  Jeffrey Stedfast  <fejj@novell.com>

	* Content.cs (ZoomFactor): Implemented.
	(Zoomed event): Implemented.

2009-11-13  Chris Toshok  <toshok@ximian.com>

	* Settings.cs: stub out EnableGPUAcceleration.

2009-11-05  Sebastien Pouliot  <sebastien@ximian.com>

	* Content.cs: Add null-check in RegisterEvent (a null value
	would cause bad side effects). Reduce UnregisterEvent visibility.

	r: rolf

2009-10-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* Settings.cs: Add comment about refresh rate validation

	r: alan

2009-10-01  Sebastien Pouliot  <sebastien@ximian.com>
