@@ -1,3 +1,8 @@
+2010-06-30  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* SilverlightHost.cs: Implement NavigationStateChanged and
+	(partially) implement NavigationState.
+
 2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* Content.cs:
